# oboeExample

./: App.tsx  README.md  app.json  package.json
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/java/com/oboeexample/: MainActivity.kt  MainApplication.kt
android/app/src/main/jni/: CMakeLists.txt  OnLoad.cpp
android/app/src/main/res/values/: strings.xml
ios/: Podfile
ios/oboeExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
ios/oboeExample.xcodeproj/: project.pbxproj
ios/oboeExample.xcodeproj/xcshareddata/xcschemes/: oboeExample.xcscheme
ios/oboeExampleTests/: oboeExampleTests.m
oboetm/: CMakeLists.txt  NativeOboeModule.cpp  NativeOboeModule.h  NativeOboeModule.ts
